--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zuoyong/zy-cli",
-  "version": "0.0.3-bate.11",
+  "version": "0.0.4",
   "description": "",
   "main": "./bin/cli.js",
   "bin": {
@@ -29,6 +29,7 @@
     "@babel/parser": "^7.20.15",
     "@babel/traverse": "^7.20.13",
     "@babel/types": "^7.20.7",
+    "@volcengine/openapi": "^1.9.1",
     "axios": "^0.26.1",
     "chalk": "^4.1.1",
     "commander": "^9.2.0",
