--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zuoyong/zy-cli",
-  "version": "0.0.4-bate.1",
+  "version": "0.0.5",
   "description": "",
   "main": "./bin/cli.js",
   "bin": {
@@ -39,6 +39,7 @@
     "fs-extra": "^10.1.0",
     "humps": "^2.0.1",
     "inquirer": "^8.2.2",
+    "node-xlsx": "^0.23.0",
     "ora": "^5.4.1"
   }
 }
