--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zuoyong/zy-cli",
-  "version": "0.0.5-bate.4",
+  "version": "0.0.6",
   "description": "",
   "main": "./bin/cli.js",
   "bin": {
